--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
     android:versionCode="65"
-          android:versionName="12.0">
+          android:versionName="16.0">
 
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
@@ -11,7 +11,7 @@
     android:largeHeap="true"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
-    android:theme="@style/AppThemeRedRC"
+    android:theme="@style/AppThemeGreenRC"
     android:usesCleartextTraffic="true">
 
     <!-- Indicates to the ControlHubUpdater what the latest version of the Control Hub is that this app supports -->
