--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,11 +10,21 @@
 
 
 // Custom definitions may go here
-
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://repo.dairy.foundation/releases"
+        }
+    }
+    dependencies {
+        classpath "dev.frozenmilk:Load:0.2.4"
+    }
+}
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
-
+apply plugin: 'dev.frozenmilk.sinister.sloth.load'
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
 
@@ -29,6 +39,7 @@ repositories {
     maven {
         url = 'https://maven.brott.dev/'
     }
+
 }
 dependencies {
     implementation project(':FtcRobotController')
