--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,10 +2,18 @@ repositories {
     mavenCentral()
     maven { url = "https://mymaven.bylazar.com/releases" }
     maven { url = 'https://maven.brott.dev/' }
+    maven {
+        url = "https://repo.dairy.foundation/releases"
+    }
+    // Dairy snapshots repository
+    maven {
+        url = "https://repo.dairy.foundation/snapshots"
+    }
     google() // Needed for androidx
 }
 
 dependencies {
+    implementation("dev.frozenmilk.sinister:Sloth:0.2.4")
     implementation 'org.firstinspires.ftc:Inspection:11.0.0'
     implementation 'org.firstinspires.ftc:Blocks:11.0.0'
     implementation 'org.firstinspires.ftc:RobotCore:11.0.0'
