--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'dev.nextftc:hardware:1.0.1' // If you would like to use the hardware module
     implementation 'dev.nextftc:control:1.0.0'
     implementation 'dev.nextftc:bindings:1.0.1'
+    implementation 'androidx.xr.runtime:runtime:1.0.0-alpha10'
 }
