--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -44,9 +44,9 @@ repositories {
 dependencies {
     implementation project(':FtcRobotController')
     implementation 'dev.nextftc.extensions:pedro:1.0.0'
-    implementation 'dev.nextftc:ftc:1.0.1'
-    implementation 'dev.nextftc:hardware:1.0.1' // If you would like to use the hardware module
-    implementation 'dev.nextftc:control:1.0.0'
+    implementation 'dev.nextftc:ftc:1.1.0'
+    implementation 'dev.nextftc:hardware:1.1.0' // If you would like to use the hardware module
+    implementation 'dev.nextftc.control2:control:0.0.1-alpha.4'
     implementation 'dev.nextftc:bindings:1.0.1'
     implementation 'androidx.xr.runtime:runtime:1.0.0-alpha10'
 }
